--- a/2.2_RickMorty.instructional/index.html
+++ b/2.2_RickMorty.instructional/index.html
@@ -11,11 +11,11 @@
 
 <body>
 
-    <h1>Portraits</h1>
+   
     <!-- DO NOT ALTER HTML -->
 
-    <img id='imageOne' src="" />
-    <img id='imageTwo' src="" />
+    <img id='imageOne' src="https://rickandmortyapi.com/api/character/avatar/1.jpeg" />
+    <img id='imageTwo' src="https://rickandmortyapi.com/api/character/avatar/4.jpeg" />
 
     <script src="main.js"></script>
 
